--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -125,7 +125,7 @@
     }
     
     blockquote {
-      border-left: 4px solid #6c82d8;
+      border-left: 4px solid #3852ba;
       padding-left: 1.5rem;
       margin: 1.5rem 0;
       font-style: italic;
